fix: files entry points tsconfig warnings

--- a/packages/carrier-mobile-ionic/tsconfig.json
+++ b/packages/carrier-mobile-ionic/tsconfig.json
@@ -31,11 +31,15 @@
 		"noUnusedLocals": false,
 		"types": ["node", "reflect-metadata", "googlemaps", "jasmine"]
 	},
+	"files": [
+        "src/main.ts",
+        "src/polyfills.ts"
+    ],
 	"include": [
-		"src/**/*.ts",
 		"./*.ts",
-		"../common/**/*.ts",
-		"../common-angular/**/*.ts"
+		"src/**/*.d.ts",
+		"../common/**/*d.ts",
+		"../common-angular/**/*d.ts"
 	],
 	"exclude": ["node_modules"],
 	"angularCompilerOptions": {
