fix: mobile ionic shop common warnings

--- a/packages/shop-mobile-ionic/angular.json
+++ b/packages/shop-mobile-ionic/angular.json
@@ -38,6 +38,11 @@
 							},
 							"src/manifest.json"
 						],
+						"allowedCommonJsDependencies": [
+							"uuid",
+							"subscriptions-transport-ws",
+							"qrcode"
+						],
 						"styles": [
 							"../../node_modules/bootstrap/dist/css/bootstrap.min.css",
 							"../../node_modules/font-awesome/scss/font-awesome.scss",
