fix: some more Docker related fixes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -76,12 +76,14 @@
 		"KEYMETRICS",
 		"LINKEDIN",
 		"logpath",
+		"microservices",
 		"MIXPANEL",
 		"mongod",
 		"mongodb",
 		"Progressbar",
 		"pyro",
 		"snyk",
+		"typedoc",
 		"typeorm",
 		"Whitespaces"
 	],
