--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
 	},
 	"scripts": {
 		"prepare:husky": "npx husky install .husky",
-		"bootstrap": "yarn install && yarn lerna bootstrap",
-		"build": "yarn run build:common && yarn lerna run --parallel build",
+		"bootstrap": "yarn install --frozen-lockfile && yarn lerna bootstrap",
+		"build": "yarn run build:common && yarn run build:common:angular && yarn lerna run --parallel build",
 		"watch": "yarn lerna run --parallel watch",
 		"clean": "yarn lerna run clean",
 		"pub": "yarn lerna publish",
@@ -31,21 +31,22 @@
 		"lint": "yarn tslint --fix",
 		"start:api": "yarn run:server",
 		"run:ncu": "yarn ncu --configFileName=.ncurc.json --configFilePath=./",
-		"run:server": "yarn run build:common && yarn --cwd ./packages/core run build && yarn --cwd ./packages/core run start",
+		"run:server": "yarn run build:server && yarn --cwd ./packages/core run start",
 		"run:server:dev": "yarn --cwd ./packages/core start:dev",
 		"run:admin": "yarn --cwd ./packages/admin-web-angular start",
 		"run:merchant": "yarn --cwd ./packages/merchant-tablet-ionic start",
 		"run:shopmobile": "yarn --cwd ./packages/shop-mobile-ionic start",
 		"run:shopweb": "yarn --cwd ./packages/shop-web-angular start",
 		"run:carrier": "yarn --cwd ./packages/carrier-mobile-ionic start",
-		"build:server": "yarn run build:common && yarn --cwd ./packages/core run build",
-		"build:common": "yarn --cwd ./packages/common build && yarn --cwd ./packages/common-angular build",
-		"build:admin": "yarn run build:common && yarn --cwd ./packages/admin-web-angular run build",
-		"build:merchant": "yarn run build:common && yarn --cwd ./packages/merchant-tablet-ionic run build",
-		"build:shopmobile": "yarn run build:common && yarn --cwd ./packages/shop-mobile-ionic run build",
-		"build:shopweb": "yarn run build:common && yarn --cwd ./packages/shop-web-angular run build",
-		"build:carrier": "yarn run build:common && yarn --cwd ./packages/carrier-mobile-ionic run build",
-		"build:all": "yarn run build:common && yarn run build:server && yarn run build:admin && yarn run build:merchant && yarn run build:shopmobile && yarn run build:shopweb && yarn run build:carrier",
+		"build:server": "yarn run build:common && yarn lerna run build --scope @ever-platform/core",
+		"build:common": "yarn lerna run build --scope @ever-platform/common",
+		"build:common:angular": "yarn lerna run build --scope @ever-platform/common-angular",
+		"build:admin": "yarn run build:common && yarn run build:common:angular && yarn lerna run build --scope @ever-platform/admin-web-angular",
+		"build:merchant": "yarn run build:common && yarn run build:common:angular && yarn lerna run build --scope @ever-platform/merchant-tablet-ionic",
+		"build:shopmobile": "yarn run build:common && yarn run build:common:angular && yarn lerna run build --scope @ever-platform/shop-mobile-ionic",
+		"build:shopweb": "yarn run build:common && yarn run build:common:angular && yarn lerna run build --scope @ever-platform/shop-web-angular",
+		"build:carrier": "yarn run build:common && yarn run build:common:angular && yarn lerna run build --scope @ever-platform/carrier-mobile-ionic",
+		"build:all": "yarn run build:common && yarn run build:common:angular && yarn run build:server && yarn run build:admin && yarn run build:merchant && yarn run build:shopmobile && yarn run build:shopweb && yarn run build:carrier",
 		"tslint-check": "tslint-config-prettier-check ./tslint.json",
 		"count": "cross-env yarn cloc packages/core/src packages/shop-web-angular/src packages/carrier-mobile-ionic/src packages/shop-web-angular/src packages/shop-mobile-ionic/src packages/merchant-tablet-ionic/src packages/common-angular packages/common --exclude-dir='node_modules,modules'",
 		"snyk-protect": "snyk protect"
