--- a/packages/common-angular/package.json
+++ b/packages/common-angular/package.json
@@ -49,6 +49,7 @@
 	"devDependencies": {
 		"@types/node": "16.11.0",
 		"lint": "^0.7.0",
+		"rimraf": "^3.0.2",
 		"ts-node": "~10.3.0",
 		"typescript": "~4.2.4"
 	},
