--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -40,6 +40,7 @@
 		"@types/node": "16.11.0",
 		"ts-node": "~10.3.0",
 		"tslint": "^6.1.1",
+		"rimraf": "^3.0.2",
 		"typescript": "~4.2.4"
 	},
 	"snyk": false
