--- a/packages/merchant-tablet-ionic/package.json
+++ b/packages/merchant-tablet-ionic/package.json
@@ -192,6 +192,7 @@
 		"karma-jasmine": "~4.0.1",
 		"karma-jasmine-html-reporter": "^1.7.0",
 		"protractor": "~7.0.0",
+		"rimraf": "^3.0.2",
 		"ts-node": "~10.3.0",
 		"tslint": "~5.20.1",
 		"typescript": "~4.2.4"
