--- a/packages/shop-web-gatsby/package.json
+++ b/packages/shop-web-gatsby/package.json
@@ -69,6 +69,7 @@
     "gatsby-cli": "^4.0.0",
     "gatsby-plugin-sass": "^5.0.0",
     "gatsby-source-graphql": "^4.0.0",
+	"rimraf": "^3.0.2",
     "prettier": "^2.4.1",
     "tslint": "^6.1.3",
     "typescript": "~4.2.4"
