fix: more for Docker

--- a/.deploy/api/Dockerfile
+++ b/.deploy/api/Dockerfile
@@ -26,10 +26,12 @@ ENV CI=true
 
 RUN apk --update add bash \
 	&& apk add libexecinfo libexecinfo-dev \
+	&& npm i -g npm \
 	&& apk add --no-cache --virtual build-dependencies build-base \
 	snappy dos2unix g++ snappy-dev gcc libgcc libstdc++ linux-headers autoconf automake make nasm python2 py2-setuptools vips-dev git \
 	&& npm install --quiet node-gyp -g \
 	&& npm config set python /usr/bin/python \
+	&& npm install yarn -g --force \
 	&& mkdir /srv/ever && chown -R node:node /srv/ever
 
 COPY wait .deploy/api/entrypoint.compose.sh .deploy/api/entrypoint.prod.sh /
