--- a/packages/admin-web-angular/angular.json
+++ b/packages/admin-web-angular/angular.json
@@ -67,7 +67,7 @@
 							"../../node_modules/tinymce/plugins/table/plugin.min.js",
 							"../../node_modules/echarts/dist/echarts.min.js",
 							"../../node_modules/echarts/dist/extension/bmap.min.js",
-							"../../node_modules/chart.js/dist/Chart.min.js"
+							"../../node_modules/chart.js/dist/chart.min.js"
 						]
 					},
 					"configurations": {
@@ -130,7 +130,7 @@
 							"../../node_modules/tinymce/plugins/table/plugin.min.js",
 							"../../node_modules/echarts/dist/echarts.min.js",
 							"../../node_modules/echarts/dist/extension/bmap.min.js",
-							"../../node_modules/chart.js/dist/Chart.min.js"
+							"../../node_modules/chart.js/dist/chart.min.js"
 						],
 						"styles": [
 							"../../node_modules/bootstrap/dist/css/bootstrap.css",
