--- a/packages/admin-web-angular/.env.template
+++ b/packages/admin-web-angular/.env.template
@@ -35,7 +35,7 @@ CURRENCY_SYMBOL=$
 
 DEFAULT_LANGUAGE=en-US
 
-# For maintenance micro service. Ever maintanance API URL: https://maintenance.ever.co/status
+# For maintenance micro service. Ever maintenance API URL: https://maintenance.ever.co/status
 SETTINGS_APP_TYPE=admin
 SETTINGS_MAINTENANCE_API_URL=
 
