--- a/packages/admin-web-angular/package.json
+++ b/packages/admin-web-angular/package.json
@@ -93,7 +93,7 @@
 		"apollo-upload-client": "^16.0.0",
 		"bootstrap": "^4.6.0",
 		"buffer": "^6.0.3",
-		"chart.js": "^3.5.1",
+		"chart.js": "^3.6.0",
 		"ckeditor": "^4.11.4",
 		"classlist.js": "1.1.20150312",
 		"core-js": "^3.18.3",
@@ -166,6 +166,7 @@
 		"@storybook/addon-notes": "^5.3.21",
 		"@storybook/addons": "^6.3.12",
 		"@storybook/angular": "^6.3.12",
+		"@types/chart.js": "^2.9.34",
 		"@types/jasmine": "~3.9.1",
 		"@types/jasminewd2": "~2.0.10",
 		"@types/node": "^16.11.0",
