fix: more docker fixes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,11 +66,15 @@
 	"vsicons.presets.nestjs": true,
 	"cSpell.words": [
 		"AGPL",
+		"changeme",
 		"Codegen",
 		"CQRS",
+		"devkit",
 		"entrypoint",
 		"envalid",
 		"esnext",
+		"fontawesome",
+		"fortawesome",
 		"GQLPORT",
 		"inversify",
 		"KEYMETRICS",
