--- a/packages/carrier-mobile-ionic/.env.template
+++ b/packages/carrier-mobile-ionic/.env.template
@@ -35,7 +35,7 @@ GQL_SUBSCRIPTIONS_ENDPOINT=ws://localhost:5050/subscriptions
 SERVICES_ENDPOINT=http://localhost:5500
 HTTPS_SERVICES_ENDPOINT=https://localhost:5501
 
-# For maintenance micro service. Ever maintanance API URL: https://maintenance.ever.co/status
+# For maintenance micro service. Ever maintenance API URL: https://maintenance.ever.co/status
 SETTINGS_APP_TYPE=carrier-mobile
 SETTINGS_MAINTENANCE_API_URL=
 
