--- a/packages/carrier-mobile-ionic/package.json
+++ b/packages/carrier-mobile-ionic/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@ever-platform/carrier-mobile-ionic",
 	"version": "0.4.3",
-	"description": "Ever Carrier Mobile App",
+	"description": "Ever Demand Carrier Mobile App",
 	"license": "GPL-3.0",
 	"homepage": "https://ever.co/",
 	"repository": {
