--- a/packages/merchant-tablet-ionic/package.json
+++ b/packages/merchant-tablet-ionic/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@ever-platform/merchant-tablet-ionic",
 	"version": "0.4.3",
-	"description": "Ever Merchant Tablet App",
+	"description": "Ever Demand Merchant Tablet App",
 	"license": "AGPL-3.0",
 	"homepage": "https://ever.co",
 	"repository": {
