--- a/packages/shop-web-angular/package.json
+++ b/packages/shop-web-angular/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@ever-platform/shop-web-angular",
 	"version": "0.4.3",
-	"description": "Ever Web Shop",
+	"description": "Ever Demand Web Shop",
 	"license": "AGPL-3.0",
 	"homepage": "https://ever.co",
 	"repository": {
