--- a/.github/workflows/docker-build-publish.yml
+++ b/.github/workflows/docker-build-publish.yml
@@ -2,7 +2,10 @@ name: Build and Publish Docker Images
 
 on:
     push:
-        branches: [develop,master]
+        branches:
+          - develop
+          - master
+          - feature/packages-updates
 
 jobs:
     ever-api:
