--- a/packages/merchant-tablet-ionic/.env.template
+++ b/packages/merchant-tablet-ionic/.env.template
@@ -41,6 +41,6 @@ MAP_CARRIER_ICON_LINK=http://maps.google.com/mapfiles/kml/pal4/icon54.png
 
 DEFAULT_LANGUAGE=en
 
-# For maintenance micro service. Ever maintanance API URL: https://maintenance.ever.co/status
+# For maintenance micro service. Ever Demand maintenance API URL: https://maintenance.ever.co/status
 SETTINGS_APP_TYPE=merchant-tablet
 SETTINGS_MAINTENANCE_API_URL=
