fix: more packages updates

--- a/packages/admin-web-angular/package.json
+++ b/packages/admin-web-angular/package.json
@@ -83,13 +83,7 @@
 		"angular2-toaster": "^11.0.1",
 		"angular2-uuid": "^1.1.1",
 		"apollo-angular": "^2.6.0",
-		"apollo-angular-link-http": "^1.11.0",
-		"apollo-angular-link-http-common": "^1.10.0",
-		"apollo-cache-inmemory": "^1.6.6",
-		"apollo-client": "^2.6.10",
-		"apollo-link": "^1.2.14",
-		"apollo-link-context": "^1.0.20",
-		"apollo-link-ws": "^1.0.20",
+		"@apollo/client": "^3.5.5",
 		"apollo-upload-client": "^16.0.0",
 		"bootstrap": "^4.6.0",
 		"buffer": "^6.0.3",
@@ -103,8 +97,8 @@
 		"faker": "^5.5.3",
 		"fingerprintjs2": "^2.0.6",
 		"global": "^4.4.0",
-		"graphql": "^15.6.1",
-		"graphql-tag": "^2.12.5",
+		"graphql": "^16.0.1",
+		"graphql-tag": "^2.12.6",
 		"highlight.js": "^11.2.0",
 		"intl": "^1.2.5",
 		"ionicons": "^5.5.3",
