--- a/packages/carrier-mobile-ionic/package.json
+++ b/packages/carrier-mobile-ionic/package.json
@@ -82,13 +82,7 @@
 		"@ngx-translate/core": "^13.0.0",
 		"@ngx-translate/http-loader": "^6.0.0",
 		"apollo-angular": "^2.6.0",
-		"apollo-angular-link-http": "^1.11.0",
-		"apollo-angular-link-http-common": "^1.10.0",
-		"apollo-cache-inmemory": "^1.6.6",
-		"apollo-client": "^2.6.10",
-		"apollo-link": "^1.2.14",
-		"apollo-link-context": "^1.0.20",
-		"apollo-link-ws": "^1.0.20",
+		"@apollo/client": "^3.5.5",
 		"call-number": "^1.0.1",
 		"connect": "^3.7.0",
 		"cordova-android": "^10.1.1",
@@ -124,8 +118,8 @@
 		"es6-promise-plugin": "^4.2.2",
 		"font-awesome": "^4.7.0",
 		"fstream": "^1.0.12",
-		"graphql": "^15.6.1",
-		"graphql-tag": "^2.12.5",
+		"graphql": "^16.0.1",
+		"graphql-tag": "^2.12.6",
 		"handlebars": "^4.7.7",
 		"hooks-fixed": "^2.0.2",
 		"ionicons": "^5.5.3",
