--- a/packages/shop-web-angular/package.json
+++ b/packages/shop-web-angular/package.json
@@ -119,11 +119,7 @@
 		"@ngx-translate/http-loader": "^6.0.0",
 		"@types/googlemaps": "^3.30.16",
 		"apollo-angular": "^2.6.0",
-		"apollo-angular-link-http": "^1.11.0",
-		"apollo-angular-link-http-common": "^1.10.0",
-		"apollo-cache-inmemory": "^1.6.6",
-		"apollo-client": "^2.6.10",
-		"apollo-link-context": "^1.0.20",
+		"@apollo/client": "^3.5.5",
 		"bootstrap": "^4.6.0",
 		"browser-detect": "^0.2.28",
 		"bson-objectid": "^2.0.1",
@@ -131,8 +127,8 @@
 		"core-js": "^3.18.3",
 		"css-element-queries": "^1.2.3",
 		"fstream": "^1.0.12",
-		"graphql": "^15.6.1",
-		"graphql-tag": "^2.12.5",
+		"graphql": "^16.0.1",
+		"graphql-tag": "^2.12.6",
 		"handlebars": "^4.7.7",
 		"http-server": "^13.0.2",
 		"ie-shim": "^0.1.0",
