--- a/packages/shop-web-gatsby/package.json
+++ b/packages/shop-web-gatsby/package.json
@@ -34,8 +34,7 @@
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@material-ui/core": "^4.12.3",
     "@material-ui/styles": "^4.11.4",
-    "apollo-boost": "^0.4.9",
-    "apollo-client": "^2.6.10",
+    "@apollo/client": "^3.5.5",
     "bulma": "^0.9.3",
     "dotenv": "^10.0.0",
     "formik": "^2.2.9",
