fix: more fixes for packages updates

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,12 +70,14 @@
 		"Codegen",
 		"CQRS",
 		"devkit",
+		"echarts",
 		"entrypoint",
 		"envalid",
 		"esnext",
 		"fontawesome",
 		"fortawesome",
 		"GQLPORT",
+		"highlightjs",
 		"inversify",
 		"KEYMETRICS",
 		"LINKEDIN",
