--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -44,6 +44,7 @@
 		"@graphql-tools/load-files": "^6.5.2",
 		"@graphql-tools/merge": "^8.2.1",
 		"@graphql-tools/schema": "^8.3.1",
+		"@graphql-tools/utils": "^8.5.3",
 		"@nestjs/common": "^8.2.3",
 		"@nestjs/core": "^8.2.3",
 		"@nestjs/cqrs": "^8.0.0",
@@ -80,7 +81,7 @@
 		"express-handlebars": "^5.3.4",
 		"faker": "^5.5.3",
 		"fstream": "^1.0.12",
-		"graphql": "^16.0.1",
+		"graphql": "15.7.2",
 		"graphql-playground-middleware-express": "^1.7.23",
 		"graphql-subscriptions": "^2.0.0",
 		"graphql-tools": "^8.2.0",
@@ -151,7 +152,7 @@
 		"@types/form-data": "^2.2.1",
 		"@types/google-maps": "^3.2.3",
 		"@types/googlemaps": "^3.30.16",
-		"@types/graphql": "^14.2.3",
+		"@types/graphql": "^14.5.0",
 		"@types/handlebars": "^4.1.0",
 		"@types/inversify": "^2.0.33",
 		"@types/jest": "^27.0.2",
