--- a/packages/admin-web-angular/package.json
+++ b/packages/admin-web-angular/package.json
@@ -97,7 +97,7 @@
 		"faker": "^5.5.3",
 		"fingerprintjs2": "^2.0.6",
 		"global": "^4.4.0",
-		"graphql": "^16.0.1",
+		"graphql": "15.7.2",
 		"graphql-tag": "^2.12.6",
 		"subscriptions-transport-ws": "^0.11.0",
 		"highlight.js": "^11.2.0",
