--- a/packages/shop-mobile-ionic/package.json
+++ b/packages/shop-mobile-ionic/package.json
@@ -110,7 +110,7 @@
 		"cryptiles": "^4.1.3",
 		"font-awesome": "^4.7.0",
 		"fstream": "^1.0.12",
-		"graphql": "^16.0.1",
+		"graphql": "15.7.2",
 		"graphql-tag": "^2.12.6",
 		"subscriptions-transport-ws": "^0.11.0",
 		"handlebars": "^4.7.7",
