--- a/.deploy/k8s/k8s-manifest.demo.yaml
+++ b/.deploy/k8s/k8s-manifest.demo.yaml
@@ -148,3 +148,215 @@ spec:
                   ports:
                       - containerPort: 4200
                         protocol: TCP
+
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+    name: ever-demo-carrier-mobile-ionic
+spec:
+    replicas: 1
+    selector:
+        matchLabels:
+            app: ever-demo-carrier-mobile-ionic
+    template:
+        metadata:
+            labels:
+                app: ever-demo-carrier-mobile-ionic
+        spec:
+            containers:
+                - name: ever-demo-carrier-mobile-ionic
+                  image: ghcr.io/ever-co/ever-carrier-ionic:latest
+                  env:
+                      - name: DEMO
+                        value: 'true'
+                      - name: NODE_ENV
+                        value: 'production'
+                      - name: HTTPS_SERVICES_ENDPOINT
+                        value: 'https://apidemo.ever.co'
+                      # We connect via HTTPS, so no need HTTP endpoint address
+                      # - name: SERVICES_ENDPOINT
+                      #   value: ''
+                      - name: GQL_ENDPOINT
+                        value: 'http://apidemo.ever.co:5555/graphql'
+                      - name: GQL_SUBSCRIPTIONS_ENDPOINT
+                        value: 'ws://apidemo.ever.co:5050/subscriptions'
+                      - name: SENTRY_DSN
+                        value: 'https://7cd381188b6f446ca0e69185227b9031@o51327.ingest.sentry.io/4397292'
+                      - name: CHATWOOT_SDK_TOKEN
+                        value: 'jFoSXEjGmqhUhqU3zfgkFfMt'
+                      - name: GOOGLE_MAPS_API_KEY
+                        value: ''
+                      - name: GOOGLE_PLACE_AUTOCOMPLETE
+                        value: 'false'
+                      - name: DEFAULT_LATITUDE
+                        value: '42.6459136'
+                      - name: DEFAULT_LONGITUDE
+                        value: '23.3332736'
+                      - name: CURRENCY_SYMBOL
+                        value: '$'
+                      - name: DEFAULT_LANGUAGE
+                        value: 'en-US'
+
+                  ports:
+                      - containerPort: 4203
+                        protocol: TCP
+
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+    name: ever-demo-shop-mobile-ionic
+spec:
+    replicas: 1
+    selector:
+        matchLabels:
+            app: ever-demo-shop-mobile-ionic
+    template:
+        metadata:
+            labels:
+                app: ever-demo-shop-mobile-ionic
+        spec:
+            containers:
+                - name: ever-demo-shop-mobile-ionic
+                  image: ghcr.io/ever-co/ever-shop-ionic:latest
+                  env:
+                      - name: DEMO
+                        value: 'true'
+                      - name: NODE_ENV
+                        value: 'production'
+                      - name: HTTPS_SERVICES_ENDPOINT
+                        value: 'https://apidemo.ever.co'
+                      # We connect via HTTPS, so no need HTTP endpoint address
+                      # - name: SERVICES_ENDPOINT
+                      #   value: ''
+                      - name: GQL_ENDPOINT
+                        value: 'http://apidemo.ever.co:5555/graphql'
+                      - name: GQL_SUBSCRIPTIONS_ENDPOINT
+                        value: 'ws://apidemo.ever.co:5050/subscriptions'
+                      - name: SENTRY_DSN
+                        value: 'https://7cd381188b6f446ca0e69185227b9031@o51327.ingest.sentry.io/4397292'
+                      - name: CHATWOOT_SDK_TOKEN
+                        value: 'jFoSXEjGmqhUhqU3zfgkFfMt'
+                      - name: GOOGLE_MAPS_API_KEY
+                        value: ''
+                      - name: GOOGLE_PLACE_AUTOCOMPLETE
+                        value: 'false'
+                      - name: DEFAULT_LATITUDE
+                        value: '42.6459136'
+                      - name: DEFAULT_LONGITUDE
+                        value: '23.3332736'
+                      - name: CURRENCY_SYMBOL
+                        value: '$'
+                      - name: DEFAULT_LANGUAGE
+                        value: 'en-US'
+
+                  ports:
+                      - containerPort: 4201
+                        protocol: TCP
+
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+    name: ever-demo-merchant-tablet-ionic
+spec:
+    replicas: 1
+    selector:
+        matchLabels:
+            app: ever-demo-merchant-tablet-ionic
+    template:
+        metadata:
+            labels:
+                app: ever-demo-merchant-tablet-ionic
+        spec:
+            containers:
+                - name: ever-demo-merchant-tablet-ionic
+                  image: ghcr.io/ever-co/ever-merchant-ionic:latest
+                  env:
+                      - name: DEMO
+                        value: 'true'
+                      - name: NODE_ENV
+                        value: 'production'
+                      - name: HTTPS_SERVICES_ENDPOINT
+                        value: 'https://apidemo.ever.co'
+                      # We connect via HTTPS, so no need HTTP endpoint address
+                      # - name: SERVICES_ENDPOINT
+                      #   value: ''
+                      - name: GQL_ENDPOINT
+                        value: 'http://apidemo.ever.co:5555/graphql'
+                      - name: GQL_SUBSCRIPTIONS_ENDPOINT
+                        value: 'ws://apidemo.ever.co:5050/subscriptions'
+                      - name: SENTRY_DSN
+                        value: 'https://7cd381188b6f446ca0e69185227b9031@o51327.ingest.sentry.io/4397292'
+                      - name: CHATWOOT_SDK_TOKEN
+                        value: 'jFoSXEjGmqhUhqU3zfgkFfMt'
+                      - name: GOOGLE_MAPS_API_KEY
+                        value: ''
+                      - name: GOOGLE_PLACE_AUTOCOMPLETE
+                        value: 'false'
+                      - name: DEFAULT_LATITUDE
+                        value: '42.6459136'
+                      - name: DEFAULT_LONGITUDE
+                        value: '23.3332736'
+                      - name: CURRENCY_SYMBOL
+                        value: '$'
+                      - name: DEFAULT_LANGUAGE
+                        value: 'en-US'
+
+                  ports:
+                      - containerPort: 4202
+                        protocol: TCP
+
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+    name: ever-demo-shop-web-angular
+spec:
+    replicas: 1
+    selector:
+        matchLabels:
+            app: ever-demo-shop-web-angular
+    template:
+        metadata:
+            labels:
+                app: ever-demo-shop-web-angular
+        spec:
+            containers:
+                - name: ever-shop-web-angular
+                  image: ghcr.io/ever-co/ever-shop-angular:latest
+                  env:
+                      - name: DEMO
+                        value: 'true'
+                      - name: NODE_ENV
+                        value: 'production'
+                      - name: HTTPS_SERVICES_ENDPOINT
+                        value: 'https://apidemo.ever.co'
+                      # We connect via HTTPS, so no need HTTP endpoint address
+                      # - name: SERVICES_ENDPOINT
+                      #   value: ''
+                      - name: GQL_ENDPOINT
+                        value: 'http://apidemo.ever.co:5555/graphql'
+                      - name: GQL_SUBSCRIPTIONS_ENDPOINT
+                        value: 'ws://apidemo.ever.co:5050/subscriptions'
+                      - name: SENTRY_DSN
+                        value: 'https://7cd381188b6f446ca0e69185227b9031@o51327.ingest.sentry.io/4397292'
+                      - name: CHATWOOT_SDK_TOKEN
+                        value: 'jFoSXEjGmqhUhqU3zfgkFfMt'
+                      - name: GOOGLE_MAPS_API_KEY
+                        value: ''
+                      - name: GOOGLE_PLACE_AUTOCOMPLETE
+                        value: 'false'
+                      - name: DEFAULT_LATITUDE
+                        value: '42.6459136'
+                      - name: DEFAULT_LONGITUDE
+                        value: '23.3332736'
+                      - name: CURRENCY_SYMBOL
+                        value: '$'
+                      - name: DEFAULT_LANGUAGE
+                        value: 'en-US'
+
+                  ports:
+                      - containerPort: 4200
+                        protocol: TCP
