--- a/.deploy/shop-web-angular/Dockerfile
+++ b/.deploy/shop-web-angular/Dockerfile
@@ -20,6 +20,7 @@ ARG WEB_PORT
 FROM node:16-alpine3.11 AS dependencies
 
 LABEL maintainer="ever@ever.co"
+LABEL org.opencontainers.image.source https://github.com/ever-co/ever-demand
 
 ENV CI=true
 
