--- a/.deploy/k8s/k8s-manifest.demo.yaml
+++ b/.deploy/k8s/k8s-manifest.demo.yaml
@@ -8,7 +8,7 @@ metadata:
         service.beta.kubernetes.io/do-loadbalancer-protocol: 'http2'
         service.beta.kubernetes.io/do-loadbalancer-http2-ports: '443'
         # Replace with your Certificate Id. You can get a list of Ids with 'doctl compute certificate list'
-        service.beta.kubernetes.io/do-loadbalancer-certificate-id: '3e7e0327-dd2d-4ffc-9b98-5c79eb4592d5'
+        service.beta.kubernetes.io/do-loadbalancer-certificate-id: 'a93346c1-d63b-4c33-84c5-4589787428ca'
         service.beta.kubernetes.io/do-loadbalancer-size-slug: 'lb-small'
         service.beta.kubernetes.io/do-loadbalancer-hostname: 'admindemo.ever.co'
 spec:
@@ -25,13 +25,37 @@ spec:
 kind: Service
 apiVersion: v1
 metadata:
+    name: ever-demo-shop-lb
+    annotations:
+        service.beta.kubernetes.io/do-loadbalancer-name: 'shopdemo.ever.co'
+        service.beta.kubernetes.io/do-loadbalancer-protocol: 'http2'
+        service.beta.kubernetes.io/do-loadbalancer-http2-ports: '443'
+        # Replace with your Certificate Id. You can get a list of Ids with 'doctl compute certificate list'
+        service.beta.kubernetes.io/do-loadbalancer-certificate-id: 'a93346c1-d63b-4c33-84c5-4589787428ca'
+        service.beta.kubernetes.io/do-loadbalancer-size-slug: 'lb-small'
+        service.beta.kubernetes.io/do-loadbalancer-hostname: 'shopdemo.ever.co'
+spec:
+    type: LoadBalancer
+    selector:
+        app: ever-demo-shop
+    ports:
+        - name: http
+          protocol: TCP
+          port: 443
+          targetPort: 4200
+
+
+---
+kind: Service
+apiVersion: v1
+metadata:
     name: ever-demo-api-lb
     annotations:
         service.beta.kubernetes.io/do-loadbalancer-name: 'apidemo.ever.co'
         service.beta.kubernetes.io/do-loadbalancer-protocol: 'http2'
         service.beta.kubernetes.io/do-loadbalancer-http2-ports: '443'
         # Replace with your Certificate Id. You can get a list of Ids with 'doctl compute certificate list'
-        service.beta.kubernetes.io/do-loadbalancer-certificate-id: '3e7e0327-dd2d-4ffc-9b98-5c79eb4592d5'
+        service.beta.kubernetes.io/do-loadbalancer-certificate-id: 'a93346c1-d63b-4c33-84c5-4589787428ca'
         service.beta.kubernetes.io/do-loadbalancer-size-slug: 'lb-small'
         service.beta.kubernetes.io/do-loadbalancer-hostname: 'apidemo.ever.co'
 spec:
@@ -86,6 +110,8 @@ spec:
                         value: 'true'
                       - name: LOG_LEVEL
                         value: 'info'
+                      - name: DB_HOST
+                        value: $DB_HOST
                   ports:
                       - containerPort: 5500
                         protocol: TCP
