fix: pass MongoDB details to API

--- a/.deploy/api/Dockerfile
+++ b/.deploy/api/Dockerfile
@@ -14,6 +14,7 @@ ARG DB_USER
 ARG DB_PASS
 ARG DB_TYPE
 ARG DB_SSL_MODE
+ARG DB_CA_CERT
 ARG DEMO
 ARG HOST
 ARG PORT
@@ -110,6 +111,7 @@ ENV DB_USER=${DB_USER}
 ENV DB_PASS=${DB_PASS}
 ENV DB_TYPE=${DB_TYPE:-mongodb}
 ENV DB_SSL_MODE=${DB_SSL_MODE}
+ENV DB_CA_CERT=${DB_CA_CERT}
 ENV HOST=${HOST:-0.0.0.0}
 ENV PORT=${PORT:-5500}
 ENV DEMO=${DEMO:-false}
