--- a/.deploy/k8s/k8s-manifest.demo.yaml
+++ b/.deploy/k8s/k8s-manifest.demo.yaml
@@ -102,16 +102,32 @@ spec:
                         value: '5555'
                       - name: GQLPORT_SUBSCRIPTIONS
                         value: '5050'
-                      - name: DB_URI
-                        value: 'mongodb://localhost/ever_development'
                       - name: ADMIN_PASSWORD_RESET
                         value: 'true'
                       - name: FAKE_DATA_GENERATOR
                         value: 'true'
                       - name: LOG_LEVEL
                         value: 'info'
+                      - name: SENTRY_DSN
+                        value: 'https://7cd381188b6f446ca0e69185227b9031@o51327.ingest.sentry.io/4397292'
+                      - name: DB_URI
+                        value: $DB_URI
                       - name: DB_HOST
                         value: $DB_HOST
+                      - name: DB_SSL_MODE
+                        value: $DB_SSL_MODE
+                      - name: DB_CA_CERT
+                        value: $DB_CA_CERT
+                      - name: DB_USER
+                        value: $DB_USER
+                      - name: DB_PASS
+                        value: $DB_PASS
+                      - name: DB_TYPE
+                        value: 'mongodb'
+                      - name: DB_NAME
+                        value: 'ever_demo'
+                      - name: DB_PORT
+                        value: '27017'
                   ports:
                       - containerPort: 5500
                         protocol: TCP
