--- a/.github/workflows/deploy-do.yml
+++ b/.github/workflows/deploy-do.yml
@@ -26,16 +26,22 @@ jobs:
             - name: Save DigitalOcean kubeconfig with short-lived credentials
               run: doctl kubernetes cluster kubeconfig save --expiry-seconds 600 k8s-ever
 
+            - name: Write MongoDB Certificate file
+              run: |
+                echo "$DB_CA_CERT" | base64 --decode > ${HOME}/ca-certificate.crt
+              env:
+                DB_CA_CERT: '${{ secrets.DB_CA_CERT }}'
+
             - name: Apply k8s manifests changes in DigitalOcean k8s cluster (if any)
               run: |
                   envsubst < $GITHUB_WORKSPACE/.deploy/k8s/k8s-manifest.demo.yaml | kubectl --context do-sfo2-k8s-ever apply -f -
               env:
-                DB_URI: ${{ secrets.DB_URI }}
-                DB_HOST: ${{ secrets.DB_HOST }}
-                DB_USER: ${{ secrets.DB_USER }}
-                DB_PASS: ${{ secrets.DB_PASS }}
+                DB_URI: '${{ secrets.DB_URI }}'
+                DB_HOST: '${{ secrets.DB_HOST }}'
+                DB_USER: '${{ secrets.DB_USER }}'
+                DB_PASS: '${{ secrets.DB_PASS }}'
                 DB_NAME: 'ever_demo'
-                DB_CA_CERT: ${{ secrets.DB_CA_CERT }}
+                DB_CA_CERT: '${{ secrets.DB_CA_CERT }}'
                 DB_SSL_MODE: 'true'
 
             # we need this step because for now we just use :latest tag
