fix: more for MongoDB certs

--- a/.deploy/api/Dockerfile
+++ b/.deploy/api/Dockerfile
@@ -18,6 +18,8 @@ ARG DB_CA_CERT
 ARG DEMO
 ARG HOST
 ARG PORT
+ARG AWS_ACCESS_KEY_ID
+ARG AWS_SECRET_ACCESS_KEY
 
 FROM node:16-alpine3.14 AS dependencies
 
@@ -115,6 +117,8 @@ ENV DB_CA_CERT=${DB_CA_CERT}
 ENV HOST=${HOST:-0.0.0.0}
 ENV PORT=${PORT:-5500}
 ENV DEMO=${DEMO:-false}
+ENV AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+ENV AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
 
 # 5500 for HTTP
 # 5501 for HTTPS
