--- a/.deploy/k8s/k8s-manifest.demo.yaml
+++ b/.deploy/k8s/k8s-manifest.demo.yaml
@@ -128,6 +128,10 @@ spec:
                         value: 'ever_demo'
                       - name: DB_PORT
                         value: '27017'
+                      - name: AWS_ACCESS_KEY_ID
+                        value: '$AWS_ACCESS_KEY_ID'
+                      - name: AWS_SECRET_ACCESS_KEY
+                        value: '$AWS_SECRET_ACCESS_KEY'
                   ports:
                       - containerPort: 5500
                         protocol: TCP
