--- a/.github/workflows/deploy-do.yml
+++ b/.github/workflows/deploy-do.yml
@@ -43,6 +43,8 @@ jobs:
                 DB_NAME: 'ever_demo'
                 DB_CA_CERT: '${{ secrets.DB_CA_CERT }}'
                 DB_SSL_MODE: 'true'
+                AWS_ACCESS_KEY_ID: '${{ secrets.AWS_ACCESS_KEY_ID }}'
+                AWS_SECRET_ACCESS_KEY: '${{ secrets.AWS_SECRET_ACCESS_KEY }}'
 
             # we need this step because for now we just use :latest tag
             # note: for production we will use different strategy later
