--- a/packages/shop-web-angular/package.json
+++ b/packages/shop-web-angular/package.json
@@ -94,19 +94,19 @@
 	},
 	"dependencies": {
 		"@agm/core": "^1.1.0",
-		"@angular/animations": "^12.2.10",
-		"@angular/cdk": "^12.2.10",
-		"@angular/common": "^12.2.10",
-		"@angular/compiler": "^12.2.10",
-		"@angular/core": "^12.2.10",
-		"@angular/forms": "^12.2.10",
-		"@angular/language-service": "^12.2.10",
-		"@angular/material": "^12.2.10",
-		"@angular/platform-browser": "^12.2.10",
-		"@angular/platform-browser-dynamic": "^12.2.10",
-		"@angular/platform-server": "^12.2.10",
-		"@angular/router": "^12.2.10",
-		"@angular/service-worker": "^12.2.10",
+		"@angular/animations": "~13.0.0",
+		"@angular/cdk": "^13.0.3",
+		"@angular/common": "~13.0.0",
+		"@angular/compiler": "~13.0.0",
+		"@angular/core": "~13.0.0",
+		"@angular/forms": "~13.0.0",
+		"@angular/language-service": "^13.0.3",
+		"@angular/material": "^13.0.3",
+		"@angular/platform-browser": "~13.0.0",
+		"@angular/platform-browser-dynamic": "~13.0.0",
+		"@angular/platform-server": "^13.0.3",
+		"@angular/router": "~13.0.0",
+		"@angular/service-worker": "^13.0.3",
 		"@apollo/client": "^3.5.5",
 		"@ever-platform/common": "^0.4.3",
 		"@ever-platform/common-angular": "^0.4.3",
@@ -164,10 +164,10 @@
 		"zone.js": "~0.11.4"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "^12.2.10",
-		"@angular-devkit/build-optimizer": "^0.1202.10",
-		"@angular/cli": "^12.2.10",
-		"@angular/compiler-cli": "^12.2.10",
+		"@angular-devkit/build-angular": "~13.0.4",
+		"@angular-devkit/build-optimizer": "^0.1300.4",
+		"@angular/cli": "~13.0.4",
+		"@angular/compiler-cli": "~13.0.0",
 		"@ngtools/webpack": "^12.2.10",
 		"@types/googlemaps": "^3.43.3",
 		"@types/jasmine": "~3.9.1",
@@ -183,9 +183,9 @@
 		"karma-jasmine-html-reporter": "^1.7.0",
 		"protractor": "~7.0.0",
 		"rimraf": "^3.0.2",
-		"ts-node": "~10.3.0",
+		"ts-node": "^10.4.0",
 		"tslint": "~5.20.1",
-		"typescript": "~4.2.4"
+		"typescript": "~4.4.3"
 	},
 	"engines": {
 		"node": ">=14.4.0",
