--- a/packages/shop-web-angular/tsconfig.app.json
+++ b/packages/shop-web-angular/tsconfig.app.json
@@ -2,8 +2,18 @@
 {
 	"extends": "./tsconfig.json",
 	"compilerOptions": {
-		"outDir": "./out-tsc/app",
-		"types": ["googlemaps"]
+		"target": "es5",
+		"module": "esnext",
+		"paths": {
+			"@angular/*": ["../node_modules/@angular/*"],
+			"@modules/server.common/*": ["../../common/src/*"],
+			"@modules/client.common.angular2/*": ["../../common-angular/src/*"],
+			"@modules/*": ["./modules/*"],
+			"@pyro/*": ["../../common/src/@pyro/*"],
+			"mongoose": ["../../common-angular/src/mongoose-placeholder"],
+			"typeorm": ["../../common-angular/src/typeorm-placeholder"],
+			"environments/*": ["./environments/*"]
+		}
 	},
 	"files": [
 		"src/main.ts",
