--- a/packages/shop-web-gatsby/.graphqlconfig
+++ b/packages/shop-web-gatsby/.graphqlconfig
@@ -8,7 +8,7 @@
         "introspect": true
       },
       "ever": {
-        "url": "http://45.77.216.107:5555/graphql",
+        "url": "https://apidemo.ever.co:5555/graphql",
         "introspect": true
       }
     }
