--- a/.deploy/api/Dockerfile
+++ b/.deploy/api/Dockerfile
@@ -5,6 +5,29 @@ ARG NODE_ENV
 ARG API_BASE_URL
 ARG API_HOST
 ARG API_PORT
+ARG HTTPPORT
+ARG HTTPSPORT
+ARG GQLPORT
+ARG GQLPORT_SUBSCRIPTIONS
+ARG STRIPE_SECRET_KEY
+ARG URBAN_AIRSHIP_KEY
+ARG URBAN_AIRSHIP_SECRET
+ARG KEYMETRICS_MACHINE_NAME
+ARG KEYMETRICS_SECRET_KEY
+ARG KEYMETRICS_PUBLIC_KEY
+ARG GOOGLE_APP_ID
+ARG GOOGLE_APP_SECRET
+ARG FACEBOOK_APP_ID
+ARG FACEBOOK_APP_SECRET
+ARG JWT_SECRET
+ARG SETTING_INVITES_ENABLED
+ARG SETTINGS_REGISTRATIONS_REQUIRED_ON_START
+ARG ADMIN_PASSWORD_RESET
+ARG FAKE_DATA_GENERATOR
+ARG ARCGIS_CLIENT_ID
+ARG ARCGIS_CLIENT_SECRET
+ARG IP_STACK_API_KEY
+ARG ENGINE_API_KEY
 ARG SENTRY_DSN
 ARG DB_URI
 ARG DB_HOST
@@ -104,6 +127,30 @@ ENV NODE_ENV=${NODE_ENV:-production}
 ENV API_HOST=${API_HOST:-api}
 ENV API_PORT=${API_PORT:-5500}
 ENV API_BASE_URL=${API_BASE_URL:-http://localhost:5500}
+ENV HTTPPORT=${HTTPPORT}
+ENV HTTPSPORT=${HTTPSPORT}
+ENV GQLPORT=${GQLPORT}
+ENV GQLPORT_SUBSCRIPTIONS=${GQLPORT_SUBSCRIPTIONS}
+ENV SETTING_INVITES_ENABLED=${SETTING_INVITES_ENABLED}
+ENV STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY}
+ENV URBAN_AIRSHIP_KEY=${URBAN_AIRSHIP_KEY}
+ENV URBAN_AIRSHIP_SECRET=${URBAN_AIRSHIP_SECRET}
+ENV KEYMETRICS_MACHINE_NAME=${KEYMETRICS_MACHINE_NAME}
+ENV KEYMETRICS_SECRET_KEY=${KEYMETRICS_SECRET_KEY}
+ENV KEYMETRICS_PUBLIC_KEY=${KEYMETRICS_PUBLIC_KEY}
+ENV GOOGLE_APP_ID=${GOOGLE_APP_ID}
+ENV GOOGLE_APP_SECRET=${GOOGLE_APP_SECRET}
+ENV FACEBOOK_APP_ID=${FACEBOOK_APP_ID}
+ENV FACEBOOK_APP_SECRET=${FACEBOOK_APP_SECRET}
+ENV JWT_SECRET=${JWT_SECRET}
+ENV SETTING_INVITES_ENABLED=${SETTING_INVITES_ENABLED}
+ENV SETTINGS_REGISTRATIONS_REQUIRED_ON_START=${SETTINGS_REGISTRATIONS_REQUIRED_ON_START}
+ENV ADMIN_PASSWORD_RESET=${ADMIN_PASSWORD_RESET}
+ENV FAKE_DATA_GENERATOR=${FAKE_DATA_GENERATOR}
+ENV ARCGIS_CLIENT_ID=${ARCGIS_CLIENT_ID}
+ENV ARCGIS_CLIENT_SECRET=${ARCGIS_CLIENT_SECRET}
+ENV IP_STACK_API_KEY=${IP_STACK_API_KEY}
+ENV ENGINE_API_KEY=${ENGINE_API_KEY}
 ENV SENTRY_DSN=${SENTRY_DSN}
 ENV DB_URI=${DB_URI:-mongodb://localhost/ever_development}
 ENV DB_HOST=${DB_HOST:-localhost}
@@ -125,9 +172,9 @@ ENV AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
 # 5555 for GraphQL
 # 5050 for GraphQL Subscriptions
 
-EXPOSE ${PORT} 5501 5050 5555 27017 28017
+EXPOSE ${PORT} 5501 5050 5555
 
 ENTRYPOINT [ "./entrypoint.prod.sh" ]
 
-# CMD [ "pm2-runtime", "main.js" ]
-CMD [ "node", "packages/core/build/main.js" ]
+CMD [ "pm2-runtime", "packages/core/build/main.js" ]
+# CMD [ "node", "packages/core/build/main.js" ]
