fix: deployments to DO

--- a/.deploy/carrier-mobile-ionic/Dockerfile
+++ b/.deploy/carrier-mobile-ionic/Dockerfile
@@ -4,6 +4,13 @@ ARG API_BASE_URL
 ARG API_HOST
 ARG API_PORT
 ARG CLIENT_BASE_URL
+ARG DEMO
+ARG WEB_HOST
+ARG WEB_PORT
+ARG HTTPS_SERVICES_ENDPOINT
+ARG SERVICES_ENDPOINT
+ARG GQL_ENDPOINT
+ARG GQL_SUBSCRIPTIONS_ENDPOINT
 ARG SENTRY_DSN
 ARG CHATWOOT_SDK_TOKEN
 ARG CLOUDINARY_CLOUD_NAME
@@ -15,9 +22,6 @@ ARG DEFAULT_LATITUDE
 ARG DEFAULT_LONGITUDE
 ARG DEFAULT_CURRENCY
 ARG DEFAULT_LANGUAGE
-ARG DEMO
-ARG WEB_HOST
-ARG WEB_PORT
 ARG DEFAULT_CUSTOMER_LOGO
 ARG LOGIN_LOGO
 ARG NO_INTERNET_LOGO
@@ -26,10 +30,6 @@ ARG APP_NAME
 ARG MIXPANEL_API_KEY
 ARG DEFAULT_LOGIN_USERNAME
 ARG DEFAULT_LOGIN_PASSWORD
-ARG GQL_ENDPOINT
-ARG GQL_SUBSCRIPTIONS_ENDPOINT
-ARG SERVICES_ENDPOINT
-ARG HTTPS_SERVICES_ENDPOINT
 ARG SETTINGS_APP_TYPE
 ARG SETTINGS_MAINTENANCE_API_URL
 
@@ -87,37 +87,6 @@ COPY --chown=node:node --from=development /srv/ever .
 ENV NODE_OPTIONS=${NODE_OPTIONS:-"--max-old-space-size=2048"}
 ENV NODE_ENV=${NODE_ENV:-production}
 
-ENV API_BASE_URL=${API_BASE_URL:-http://localhost:3000}
-ENV CLIENT_BASE_URL=${CLIENT_BASE_URL:-http://localhost:4203}
-ENV SENTRY_DSN=${SENTRY_DSN}
-
-ENV CHATWOOT_SDK_TOKEN=${CHATWOOT_SDK_TOKEN}
-ENV CLOUDINARY_CLOUD_NAME=${CLOUDINARY_CLOUD_NAME}
-ENV CLOUDINARY_API_KEY=${CLOUDINARY_API_KEY}
-ENV GOOGLE_MAPS_API_KEY=${GOOGLE_MAPS_API_KEY}
-ENV GOOGLE_ANALYTICS_API_KEY=${GOOGLE_ANALYTICS_API_KEY}
-ENV GOOGLE_PLACE_AUTOCOMPLETE=${GOOGLE_PLACE_AUTOCOMPLETE:-false}
-ENV DEFAULT_LATITUDE=${DEFAULT_LATITUDE:-42.6459136}
-ENV DEFAULT_LONGITUDE=${DEFAULT_LONGITUDE:-23.3332736}
-ENV DEFAULT_CURRENCY=${DEFAULT_CURRENCY:-USD}_DSN}
-ENV DEFAULT_LANGUAGE=${DEFAULT_LANGUAGE:-en}
-ENV DEFAULT_CUSTOMER_LOGO=${DEFAULT_CUSTOMER_LOGO}
-ENV LOGIN_LOGO=${LOGIN_LOGO}
-ENV NO_INTERNET_LOGO=${NO_INTERNET_LOGO}
-ENV COMPANY_NAME=${COMPANY_NAME}
-ENV APP_NAME=${APP_NAME}
-ENV MIXPANEL_API_KEY=${MIXPANEL_API_KEY}
-ENV DEFAULT_LOGIN_USERNAME=${DEFAULT_LOGIN_USERNAME}
-ENV DEFAULT_LOGIN_PASSWORD=${DEFAULT_LOGIN_PASSWORD}
-ENV GQL_ENDPOINT=${GQL_ENDPOINT}
-ENV GQL_SUBSCRIPTIONS_ENDPOINT=${GQL_SUBSCRIPTIONS_ENDPOINT}
-ENV SERVICES_ENDPOINT=${SERVICES_ENDPOINT}
-ENV HTTPS_SERVICES_ENDPOINT=${HTTPS_SERVICES_ENDPOINT}
-ENV SETTINGS_APP_TYPE=${SETTINGS_APP_TYPE}
-ENV SETTINGS_MAINTENANCE_API_URL=${SETTINGS_MAINTENANCE_API_URL}
-
-ENV DEMO=${DEMO:-false}
-
 ENV IS_DOCKER=true
 
 RUN yarn build:carrier
@@ -136,16 +105,50 @@ COPY --chown=nginx:nginx --from=build /srv/ever/packages/carrier-mobile-ionic/ww
 RUN chmod +x wait entrypoint.compose.sh entrypoint.prod.sh && \
     chmod a+rw /etc/nginx/conf.d/compose.conf.template /etc/nginx/conf.d/prod.conf.template
 
-ENV API_BASE_URL=${API_BASE_URL:-http://localhost:3000}
-ENV CLIENT_BASE_URL=${CLIENT_BASE_URL:-http://localhost:4203}
-ENV SENTRY_DSN=${SENTRY_DSN}
-
 ENV API_HOST=${API_HOST:-api}
 ENV API_PORT=${API_PORT:-3000}
-ENV WEB_HOST=${WEB_HOST:-0.0.0.0}
-ENV WEB_PORT=${WEB_PORT:-4203}
 
+ENV API_BASE_URL=${API_BASE_URL:-http://localhost:3000}
+ENV CLIENT_BASE_URL=${CLIENT_BASE_URL:-http://localhost:4203}
+ENV WEB_HOST=${WEB_HOST:-0.0.0.0}
+ENV WEB_PORT=${WEB_PORT:-4200}
 ENV DEMO=${DEMO:-false}
+
+ENV HTTPS_SERVICES_ENDPOINT=${HTTPS_SERVICES_ENDPOINT}
+ENV SERVICES_ENDPOINT=${SERVICES_ENDPOINT}
+ENV GQL_ENDPOINT=${GQL_ENDPOINT}
+ENV GQL_SUBSCRIPTIONS_ENDPOINT=${GQL_SUBSCRIPTIONS_ENDPOINT}
+ENV SENTRY_DSN=${SENTRY_DSN}
+ENV CHATWOOT_SDK_TOKEN=${CHATWOOT_SDK_TOKEN}
+ENV CLOUDINARY_CLOUD_NAME=${CLOUDINARY_CLOUD_NAME}
+ENV CLOUDINARY_API_KEY=${CLOUDINARY_API_KEY}
+ENV GOOGLE_MAPS_API_KEY=${GOOGLE_MAPS_API_KEY}
+ENV GOOGLE_PLACE_AUTOCOMPLETE=${GOOGLE_PLACE_AUTOCOMPLETE:-false}
+ENV DEFAULT_LATITUDE=${DEFAULT_LATITUDE:-42.6459136}
+ENV DEFAULT_LONGITUDE=${DEFAULT_LONGITUDE:-23.3332736}
+ENV DEFAULT_CURRENCY=${DEFAULT_CURRENCY:-USD}_DSN}
+ENV DEFAULT_LANGUAGE=${DEFAULT_LANGUAGE}
+ENV DEFAULT_LOGIN_USERNAME=${DEFAULT_LOGIN_USERNAME}
+ENV DEFAULT_LOGIN_PASSWORD=${DEFAULT_LOGIN_PASSWORD}
+ENV DEFAULT_CUSTOMER_LOGO=${DEFAULT_CUSTOMER_LOGO}
+ENV LOGIN_LOGO=${LOGIN_LOGO}
+ENV MIXPANEL_API_KEY=${MIXPANEL_API_KEY}
+ENV CURRENCY_SYMBOL=${CURRENCY_SYMBOL}
+ENV NO_INTERNET_LOGO=${NO_INTERNET_LOGO}
+ENV MAP_MERCHANT_ICON_LINK=${MAP_MERCHANT_ICON_LINK}
+ENV MAP_USER_ICON_LINK=${MAP_USER_ICON_LINK}
+ENV MAP_CARRIER_ICON_LINK=${MAP_CARRIER_ICON_LINK}
+ENV API_FILE_UPLOAD_URL=${API_FILE_UPLOAD_URL}
+ENV APP_NAME=${APP_NAME}
+ENV COMPANY_NAME=${COMPANY_NAME}
+ENV COMPANY_SITE_LINK=${COMPANY_SITE_LINK}
+ENV COMPANY_GITHUB_LINK=${COMPANY_GITHUB_LINK}
+ENV COMPANY_FACEBOOK_LINK=${COMPANY_FACEBOOK_LINK}
+ENV COMPANY_TWITTER_LINK=${COMPANY_TWITTER_LINK}
+ENV COMPANY_LINKEDIN_LINK=${COMPANY_LINKEDIN_LINK}
+ENV GENERATE_PASSWORD_CHARSET=${GENERATE_PASSWORD_CHARSET}
+ENV SETTINGS_APP_TYPE=${SETTINGS_APP_TYPE}
+ENV SETTINGS_MAINTENANCE_API_URL=${SETTINGS_MAINTENANCE_API_URL}
 
 EXPOSE ${WEB_PORT}
 
