--- a/.deploy/shop-web-angular/Dockerfile
+++ b/.deploy/shop-web-angular/Dockerfile
@@ -4,6 +4,13 @@ ARG API_BASE_URL
 ARG API_HOST
 ARG API_PORT
 ARG CLIENT_BASE_URL
+ARG DEMO
+ARG WEB_HOST
+ARG WEB_PORT
+ARG HTTPS_SERVICES_ENDPOINT
+ARG SERVICES_ENDPOINT
+ARG GQL_ENDPOINT
+ARG GQL_SUBSCRIPTIONS_ENDPOINT
 ARG SENTRY_DSN
 ARG CHATWOOT_SDK_TOKEN
 ARG CLOUDINARY_CLOUD_NAME
@@ -13,9 +20,12 @@ ARG GOOGLE_PLACE_AUTOCOMPLETE
 ARG DEFAULT_LATITUDE
 ARG DEFAULT_LONGITUDE
 ARG DEFAULT_CURRENCY
-ARG DEMO
-ARG WEB_HOST
-ARG WEB_PORT
+ARG AUTH_LOGO
+ARG NO_INTERNET_LOGO
+ARG DELIVERY_TIME_MIN
+ARG DELIVERY_TIME_MAX
+ARG SETTINGS_APP_TYPE
+ARG SETTINGS_MAINTENANCE_API_URL
 
 FROM node:16-alpine3.14 AS dependencies
 
@@ -71,21 +81,6 @@ COPY --chown=node:node --from=development /srv/ever .
 ENV NODE_OPTIONS=${NODE_OPTIONS:-"--max-old-space-size=2048"}
 ENV NODE_ENV=${NODE_ENV:-production}
 
-ENV API_BASE_URL=${API_BASE_URL:-http://localhost:3000}
-ENV CLIENT_BASE_URL=${CLIENT_BASE_URL:-http://localhost:4200}
-ENV SENTRY_DSN=${SENTRY_DSN}
-
-ENV CHATWOOT_SDK_TOKEN=${CHATWOOT_SDK_TOKEN}
-ENV CLOUDINARY_CLOUD_NAME=${CLOUDINARY_CLOUD_NAME}
-ENV CLOUDINARY_API_KEY=${CLOUDINARY_API_KEY}
-ENV GOOGLE_MAPS_API_KEY=${GOOGLE_MAPS_API_KEY}
-ENV GOOGLE_PLACE_AUTOCOMPLETE=${GOOGLE_PLACE_AUTOCOMPLETE:-false}
-ENV DEFAULT_LATITUDE=${DEFAULT_LATITUDE:-42.6459136}
-ENV DEFAULT_LONGITUDE=${DEFAULT_LONGITUDE:-23.3332736}
-ENV DEFAULT_CURRENCY=${DEFAULT_CURRENCY:-USD}_DSN}
-
-ENV DEMO=${DEMO:-false}
-
 ENV IS_DOCKER=true
 
 RUN yarn build:shopweb
@@ -104,16 +99,34 @@ COPY --chown=nginx:nginx --from=build /srv/ever/packages/shop-web-angular/build 
 RUN chmod +x wait entrypoint.compose.sh entrypoint.prod.sh && \
     chmod a+rw /etc/nginx/conf.d/compose.conf.template /etc/nginx/conf.d/prod.conf.template
 
-ENV API_BASE_URL=${API_BASE_URL:-http://localhost:3000}
-ENV CLIENT_BASE_URL=${CLIENT_BASE_URL:-http://localhost:4200}
-ENV SENTRY_DSN=${SENTRY_DSN}
-
 ENV API_HOST=${API_HOST:-api}
 ENV API_PORT=${API_PORT:-3000}
+
+ENV API_BASE_URL=${API_BASE_URL:-http://localhost:3000}
+ENV CLIENT_BASE_URL=${CLIENT_BASE_URL:-http://localhost:4200}
 ENV WEB_HOST=${WEB_HOST:-0.0.0.0}
 ENV WEB_PORT=${WEB_PORT:-4200}
-
 ENV DEMO=${DEMO:-false}
+
+ENV HTTPS_SERVICES_ENDPOINT=${HTTPS_SERVICES_ENDPOINT}
+ENV SERVICES_ENDPOINT=${SERVICES_ENDPOINT}
+ENV GQL_ENDPOINT=${GQL_ENDPOINT}
+ENV GQL_SUBSCRIPTIONS_ENDPOINT=${GQL_SUBSCRIPTIONS_ENDPOINT}
+ENV SENTRY_DSN=${SENTRY_DSN}
+ENV CHATWOOT_SDK_TOKEN=${CHATWOOT_SDK_TOKEN}
+ENV CLOUDINARY_CLOUD_NAME=${CLOUDINARY_CLOUD_NAME}
+ENV CLOUDINARY_API_KEY=${CLOUDINARY_API_KEY}
+ENV GOOGLE_MAPS_API_KEY=${GOOGLE_MAPS_API_KEY}
+ENV GOOGLE_PLACE_AUTOCOMPLETE=${GOOGLE_PLACE_AUTOCOMPLETE:-false}
+ENV DEFAULT_LATITUDE=${DEFAULT_LATITUDE:-42.6459136}
+ENV DEFAULT_LONGITUDE=${DEFAULT_LONGITUDE:-23.3332736}
+ENV DEFAULT_CURRENCY=${DEFAULT_CURRENCY:-USD}_DSN}
+ENV AUTH_LOGO=${AUTH_LOGO}
+ENV NO_INTERNET_LOGO=${NO_INTERNET_LOGO}
+ENV DELIVERY_TIME_MIN=${DELIVERY_TIME_MIN}
+ENV DELIVERY_TIME_MAX=${DELIVERY_TIME_MAX}
+ENV SETTINGS_APP_TYPE=${SETTINGS_APP_TYPE}
+ENV SETTINGS_MAINTENANCE_API_URL=${SETTINGS_MAINTENANCE_API_URL}
 
 EXPOSE ${WEB_PORT}
 
