fix: angular v13.1 for common angular

--- a/packages/common-angular/package.json
+++ b/packages/common-angular/package.json
@@ -27,17 +27,18 @@
 		"access": "public"
 	},
 	"dependencies": {
-		"@angular/animations": "^13.0.3",
+		"@angular/animations": "^13.1.0",
 		"@angular/cdk": "^13.1.0",
-		"@angular/common": "^13.0.3",
-		"@angular/compiler": "^13.0.3",
-		"@angular/core": "^13.0.3",
-		"@angular/forms": "^13.0.3",
-		"@angular/language-service": "^13.0.3",
-		"@angular/platform-browser": "^13.0.3",
-		"@angular/platform-browser-dynamic": "^13.0.3",
-		"@angular/router": "^13.0.3",
-		"@angular/service-worker": "^13.0.3",
+		"@angular/common": "^13.1.0",
+		"@angular/compiler": "^13.1.0",
+		"@angular/core": "^13.1.0",
+		"@angular/forms": "^13.1.0",
+		"@angular/language-service": "^13.1.0",
+		"@angular/localize": "^13.1.0",
+		"@angular/platform-browser": "^13.1.0",
+		"@angular/platform-browser-dynamic": "^13.1.0",
+		"@angular/router": "^13.1.0",
+		"@angular/service-worker": "^13.1.0",
 		"@ever-platform/common": "^0.4.3",
 		"@ngx-translate/core": "^13.0.0",
 		"@ngx-translate/http-loader": "^6.0.0",
